<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/announcement_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/announcement_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_container_white"
            android:orientation="vertical">

            <com.tungsten.fcllibrary.component.view.FCLTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/announcement"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/announcement_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/announcement_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="4dp"
                android:orientation="horizontal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.tungsten.fcllibrary.component.view.FCLButton
            android:id="@+id/hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_hide"
            app:ripple="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.tungsten.fcllibrary.component.view.FCLImageButton
        android:id="@+id/announcement_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_container_white"
        android:contentDescription="@string/announcement_history"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_notifications_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tungsten.fcllibrary.component.view.FCLImageButton
        android:id="@+id/friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_container_white"
        android:contentDescription="@string/friends_title"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_person_add_24"
        app:layout_constraintEnd_toStartOf="@id/announcement_history"
        app:layout_constraintTop_toTopOf="@id/announcement_history" />

    <com.tungsten.fcllibrary.skin.SkinViewer
        android:id="@+id/skin_viewer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintWidth_percent="0.22" />

</androidx.constraintlayout.widget.ConstraintLayout>