<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    tools:ignore="HardcodedText">

    <!--
    Cả cột trái bọc trong 1 nền panel chung (giống ui_account.xml) thay vì để search/list
    trơ trên nền BG tuỳ chỉnh: dòng "Thư mục dùng chung"/"Thư mục riêng tư" trước đây không
    đọc được vì bg_container_transparent_clickable của mỗi dòng chỉ hiện màu lúc bấm giữ.
    -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/left_column"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_right_menu"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3">

        <com.tungsten.fcllibrary.component.view.FCLEditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/search"
            android:imeOptions="flagNoFullscreen"
            android:singleLine="true"
            app:auto_edit_tint="true" />

        <ListView
            android:id="@+id/profile_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:dividerHeight="4dp" />

        <com.tungsten.fcllibrary.component.view.FCLButton
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/action_refresh"
            app:ripple="true" />

        <com.tungsten.fcllibrary.component.view.FCLButton
            android:id="@+id/new_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_new_profile"
            app:ripple="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_column">

        <com.mio.ui.widget.FCLAppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_container_white"
            app:auto_tint="true">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <RadioGroup
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.tungsten.fcllibrary.component.view.FCLRadioButton
                        android:id="@+id/all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:checked="true"
                        android:text="@string/curse_category_0"
                        app:text_use_theme_color="true" />

                    <com.tungsten.fcllibrary.component.view.FCLRadioButton
                        android:id="@+id/fabric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fabric"
                        app:text_use_theme_color="true" />

                    <com.tungsten.fcllibrary.component.view.FCLRadioButton
                        android:id="@+id/forge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Forge"
                        app:text_use_theme_color="true" />

                    <com.tungsten.fcllibrary.component.view.FCLRadioButton
                        android:id="@+id/neoforge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NeoForge"
                        app:text_use_theme_color="true" />

                    <com.tungsten.fcllibrary.component.view.FCLRadioButton
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/control_download_device_other"
                        app:text_use_theme_color="true" />

                </RadioGroup>

            </HorizontalScrollView>

        </com.mio.ui.widget.FCLAppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/version_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.tungsten.fcllibrary.component.view.FCLProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layout"
        app:layout_constraintStart_toStartOf="@id/layout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>